--- a/www/templates/paymentReport.html
+++ b/www/templates/paymentReport.html
@@ -14,7 +14,9 @@
         <p>Total {{getTotal(items)| currency:"Kshs. "}}</p>
 
       </ion-item>
-
+      <ion-item ng-hide="item.length">
+        <p>There are no payment.</p>
+      </ion-item>
     </ion-list>
 
   </ion-content>
