compile check the sign up process

--- a/www/templates/dashboard.html
+++ b/www/templates/dashboard.html
@@ -9,6 +9,13 @@
         <!--The select inputs.-->
         <form ng-submit="SellProducts()" class="list">
             <div>
+                <div class="button-bar" style="height: 35px">
+                    <a class="button">{{business}}</a>
+                    <a class="button">{{branch}}</a>
+                </div>
+                <div class="button-bar" style="height: 35px">
+                    <a class="button">{{sale.locationName|limitTo:24}}</a>
+                </div>
 
                 <label class="item item-input item-select" ng-click="changeCustomer()">
                     <div class="input-label">
@@ -21,17 +28,17 @@
                       <option ng-repeat="item in customers" value="item.id">{{item.first_name}} {{item.last_name}} </option>
                     </select>-->
                 </label>
-                <label class="item item-input">
+                <!--<label class="item item-input">
                     <div class="input-label">
                         Location:
                     </div>
                     <span>{{sale.locationName|limitTo:24}}</span>
-                </label><!--
+                </label>--><!--
         <button class="button button-clear button-small pull-right" style="background-color: #434858; color: #f5f6fa">
           Add</button>-->
 
 
-                <div class="item item-divider title" ng-show="shoppingList.length"></div>
+                <div class="item item-divider title" ng-show="shoppingList.length" style="background-color: transparent"></div>
 
                 <!--<p ng-repeat="item in shoppingList" class="padding">-->
                 <div class="list">
