--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -9,14 +9,14 @@
         </button>
         <span><img src="img/favicon-32x32.png" alt="UP" height="30px" width="60px"
                    style="padding-left: 30px"></span>
-        <span class="col" style="font-weight: bold; margin-left: 25px; margin-top: 5px">UZAPOINT</span>
+        <span class="col" style="font-weight: bold; margin-left: 25px; width: 100px; margin-top: 5px">UZAPOINT</span>
 
 
           <ion-buttons ng-click="listSuspendedSale()" class="button button-clear col" style="text-align: right; margin-left: 10px">
             <i class="icon ion-flash-off"></i></ion-buttons>
 
-          <ion-buttons class="button button-clear col  col-offset-10 pull-right" style="text-align: right">
-            <i class="icon ion-android-notifications"></i></ion-buttons>
+          <!--<ion-buttons class="button button-clear col  col-offset-10 pull-right" style="text-align: right">
+            <i class="icon ion-android-notifications"></i></ion-buttons>-->
       </ion-nav-buttons>
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
