--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -46,11 +46,11 @@
       <label class="item item-input"  style="border: #434858 1px solid;border-radius: 25px; background-color: transparent">
         <span class="ion ion-person"></span> &nbsp; &nbsp; &nbsp;
         <input type="text" class="username" autocomplete="off" ng-model="user.username"
-               placeholder="Username" style="background-color: transparent; color: #434858">
+               placeholder="Email Address" style="background-color: transparent; color: #434858">
       </label>
       <label class="item item-input" style="border: #434858 1px solid;border-radius: 25px; margin-top: 5px; background-color: transparent; color: #434858">
         <span class="ion ion-locked"></span> &nbsp; &nbsp; &nbsp;
-        <input type="password" class="password" autocomplete="off" placeholder="Pin" ng-model="user.pin" style="background-color: transparent">
+        <input type="password" class="password" autocomplete="off" placeholder="Password" ng-model="user.pin" style="background-color: transparent">
       </label>
 
         <button class="button button-clear button-outline button-block " type="submit"
