--- a/www/templates/suspended.html
+++ b/www/templates/suspended.html
@@ -13,7 +13,7 @@
             <h2>{{item.suspend_note}}</h2>
             <p>{{item.suspend_note}}</p>
             <p>{{item.customer_name}}</p>
-            <p>Price: {{item.total_amount| currency:'Kshs. '}}</p>
+            <p>Price: <span>{{item.total_amount| currency:'Kshs. '}}</span></p>
             <p>Total sale Items {{item.count}}</p>
             <p></p>
         </div>
