--- a/www/templates/payment.html
+++ b/www/templates/payment.html
@@ -9,98 +9,101 @@
     <ion-content style="background-image: url('img/pos_bg.jpg'); margin-top: 35px">
         <form ng-submit="sellProds(sale)" class="card" style="padding-top: 10px">
             <div class="list"  ng-hide="print==1">
-                <div class="item-input-inset item item-input item-stacked-label">
+                <!--<div class="item-input-inset item item-input item-stacked-label">
                     <span class="input-label">Sale Note:</span>
                     <label>
                         <textarea rows="2" ng-model="sale.paymentNote"></textarea>
                     </label>
 
-                </div>
+                </div>-->
                 <label class="item item-input item-select">
                     <div class="input-label">
                         Paying By
                     </div>
-                    <select ng-model="sale.payBy" ng-change="changePayment()">
-                        <option value="Cash">Cash</option>
+                    <select ng-model="sale.paidBy" ng-change="paidByChange()">
+                        <option value="Cash" ng-selected=true >Cash</option>
                         <option value="Credit">Credit</option>
                         <option value="Cheque">Cheque</option>
                         <option value="Mpesa">Mpesa</option>
                         <option value="Airtel Money">Airtel Money</option>
                     </select>
+                    <!--<select ng-model="sale.payBy" ng-change="changePayment()">
+                        <option value="Cash">Cash</option>
+                        <option value="Credit">Credit</option>
+                        <option value="Cheque">Cheque</option>
+                        <option value="Mpesa">Mpesa</option>
+                        <option value="Airtel Money">Airtel Money</option>
+                    </select>-->
                 </label>
+                <!-- || sale.paidBy==Cheque-->
+                <div class="item item-input" ng-hide="sale.paidBy==Cash">
+                    <span class="input-label">Trans. Code</span><!--ng-model="sale.paid"--><!--ng-value="TotalAmount()"-->
+                    <span><input type="text"  ng-model="sale.transCode" placeholder="Optional "></span>
+                </div>
 
 
                 <div class="item item-input">
-                    <span class="input-label">Amount Paid Kshs.</span>
-                    <input type="number" ng-model="sale.TotalAmount" ng-value="0">
+                    <span class="input-label">Paid Amount</span><!--ng-model="sale.paid"--><!--ng-value="TotalAmount()"-->
+                    <span><input type="text"  ng-model="sale.TotalAmount"></span>
                 </div>
 
-                <div class="item item-input" ng-show="sale.payBy == 'Mpesa' || sale.payBy == 'Airtel Money'">
-                    <span class="input-label">Trans. Code</span>
-                    <input type="text" ng-model="sale.trans_code">
+                <div class="row">
+                    <label class="col">Payable Amount</label>
+                    <label class="col" ng-show="getDueAmount()>0">Due Amount</label>
+                    <label class="col"  ng-show="getDueAmount()<0">Balance </label>
+                </div>
+                <div style="height: 70px" class="padding item-input-inset">
+                    <label class="item-input-wrapper col" style="width: 45%">
+                        <input type="text" readonly placeholder="Payable Amount" ng-value="getTotal()">
+                    </label>
+                    <label class="item-input-wrapper col"  ng-show="getDueAmount()>0" style="width: 45%; margin-left: 2%">
+                        <input type="text" placeholder="Due Amount" readonly ng-value="getDueAmount()">
+                    </label>
+                    <label class="item-input-wrapper col"  ng-show="getDueAmount()<0" style="width: 45%; margin-left: 2%">
+                        <input type="text" placeholder="Due Amount" readonly ng-value="getBalance()">
+                    </label>
                 </div>
 
-                <div class="item item-input" ng-show="sale.payBy == 'Cheque'">
-                    <span class="input-label">Cheque No.</span>
-                    <input type="text" ng-model="sale.cheque_no">
+                <div class="row">
+                    <label class="col" ng-show="sale.tax">Sale Tax</label>
+                    <label class="col"  ng-show="sale.discount">Discount</label>
                 </div>
 
-                <div class="item item-input" ng-show="sale.payBy == 'Credit'">
-                    <span class="input-label" id="datetimepicker">Due Date</span>
-                    <input type="text" ng-model="sale.due_date">
+                <div style="height: 70px" class="padding item-input-inset">
+                    <label class="item-input-wrapper col" ng-show="sale.tax" style="width: 45%; margin-left: 2%">
+                        <input type="text" placeholder="Sale tax" readonly ng-model="sale.tax">
+                    </label>
+                    <label class="item-input-wrapper col"  ng-show="sale.discount" style="width: 45%; margin-left: 2%">
+                        <input type="text" placeholder="Due Amount" readonly ng-model="sale.discount">
+                    </label>
                 </div>
-                <!--
-                <ionic-datepicker idate="currentDate" disablepreviousdates="true"  callback="datePickerCallback">
-                    <button class="button button-block button-positive" type="button"> {{ currentDate | date:'dd - MMMM - yyyy' }}    </button>
-                </ionic-datepicker>-->
-
-
-                <div class="item item-input">
-                    <span class="input-label">Total Items</span>
-                    <span><input type="text" readonly ng-value="getItems()"></span>
+                <div class="row">
+                    <label class="col"  ng-show="sale.note">Sale Note</label>
                 </div>
-
-                <div class="item item-input">
-                    <span class="input-label">Discount Amount kshs.</span>
-                    <span><input type="number" ng-model="sale.discount" ng-value="0"></span>
+                <div style="height: 70px" class="padding item-input-inset">
+                    <label class="item-input-wrapper" ng-show="sale.note" style="margin-left: 2%">
+                        <textarea placeholder="Sale Note" rows="3" readonly ng-model="sale.note"></textarea>
+                    </label>
                 </div>
 
-                <label class="item item-input item-select">
-                    <div class="input-label">
-                        Taxation:
-                    </div>
-                    <select ng-model="sale.taxPercentage" ng-change="changeTax()">
-                        <option value="0">No Tax</option>
-                        <option value="16">16% Tax</option>
-                    </select>
-                </label>
-                <div class="item item-input">
-                    <span class="input-label">Tax Amount:</span>
-                    <span><input type="text" readonly ng-model="sale.taxAmount"></span>
+                <style>
+                    .myClassBtn{
+                        margin: 5px;
+                    }
+                </style><!--style="margin-top: 60px"-->
+                <div class="row" >
+                    <button type="button"  class="button button-small btn-myButton col myClassBtn" ng-click="add_sale_note()">+ Note</button>
+                    <button type="button"  class="button button-small btn-myButton col myClassBtn" ng-click="add_sale_tax()">+ Tax</button>
+                    <button type="button"  class="button button-small btn-myButton col myClassBtn" ng-click="add_sale_discount()">+ Discount</button>
                 </div>
-
-                <div class="item item-input">
-                    <span class="input-label">Total Payable Kshs: </span>
-                    <input type="hidden" ng-model="sale.totalPayable">
-                    <span><input type="text" readonly  ng-value="getTotal()"></span>
-                </div>
-
-                <div class="item item-input" ng-show="getBalance()>=0">
-                    <span class="input-label">Balance Kshs: </span>
-                    <input type="hidden"   ng-model="sale.balance">
-                    <span><input type="text" readonly ng-value="getBalance()"></span>
-                </div>
-
-                <div class="item item-input" ng-show="getBalance()<0">
-                    <span class="input-label">Due Amount Kshs: </span>
-                    <input type="hidden"  ng-model="sale.dueAmount" >
-                    <span><input type="text" readonly ng-value="getDueAmount()"></span>
+                <div class="row text-center" style="margin-top: 5px">
+                    <button type="button"  class="button button-small btn-myButton col" style="text-align: center">Add payment</button>
                 </div>
 
 
                 <label class="item">
                     <button class="button button-block btn-myButton" type="submit" >
-                        <i class="ion ion-ios-paperplane"></i>&nbsp;Submit</button>
+                        <i class="ion ion-ios-paperplane"></i>&nbsp; Complete</button>
                 </label>
 
             </div>
