--- a/www/templates/verify_code.html
+++ b/www/templates/verify_code.html
@@ -50,7 +50,7 @@
       </label>
         <button class="button button-clear button-outline button-block " type="submit"
                 style="border: solid 1px #f5f6fa; color: #434858; background-color: #f5f6fa; border-radius: 25px;
-                margin-top: 10px">Verification Code</button>
+                margin-top: 10px">Confirm</button>
     </form>
 
         <a href="#/login" class="button button-clear button-outline button-block " type="button"
